# happy_birthday

./: Cargo.toml  happy-birthday-179097b4e835d7c8.js  happy-birthday-179097b4e835d7c8_bg.wasm  index-270f218c89533308.css  index.html
.github/workflows/: deploy.yml
scss/: index.scss
src/: app.rs
